--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-  <span class="navbar-brand" routerLink="/"><span  class="logo">Vup-solution</span></span>
+    <span class="navbar-brand"><a class="dropdown-item" routerLink="/"><span  class="logo">Vup-solution</span></a></span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -28,6 +28,7 @@
         <span class="info-account">Administration</span>
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+        <a class="dropdown-item" routerLink="/parameter"><span class="info-account">Parameter</span></a>
         <a class="dropdown-item" routerLink="/enterprise"><span class="info-account">Entreprise</span></a>
         <a class="dropdown-item" routerLink="/factory"><span class="info-account">Atelier</span></a>
         <a class="dropdown-item" routerLink="/productionline"><span class="info-account">Ligne Production</span></a>
